--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <table class="table table-zebra w-full table-auto text-xs sm:text-sm md:text-base lg:text-lg text-center">
             <thead>
             <tr>
-                <th class="whitespace-normal break-words">기존 번역</th>
-                <th class="whitespace-normal break-words">새 번역</th>
+                <th class="whitespace-normal break-words text-sm sm:text-base md:text-lg lg:text-xl">기존 번역</th>
+                <th class="whitespace-normal break-words text-sm sm:text-base md:text-lg lg:text-xl">새 번역</th>
             </tr>
             </thead>
             <tbody>
@@ -184,9 +184,9 @@
         <table class="table table-zebra w-full table-fixed text-center">
                 <thead>
                 <tr>
-                    <th class="w-1/3 whitespace-normal break-words">고대 로마신조 (2세기)<br>문답형</th>
-                    <th class="w-1/3 whitespace-normal break-words">로마신조 (4세기)<br>고백형</th>
-                    <th class="w-1/3 whitespace-normal break-words">공인 원문 (750년)<br>Forma Recepta</th>
+                    <th class="w-1/3 whitespace-normal break-words text-sm sm:text-base md:text-lg lg:text-xl">고대 로마신조 (2세기)<br>문답형</th>
+                    <th class="w-1/3 whitespace-normal break-words text-sm sm:text-base md:text-lg lg:text-xl">로마신조 (4세기)<br>고백형</th>
+                    <th class="w-1/3 whitespace-normal break-words text-sm sm:text-base md:text-lg lg:text-xl">공인 원문 (750년)<br>Forma Recepta</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -265,7 +265,7 @@
                     <td class="whitespace-normal break-words"><strong>죄를 사하여 주시는것과</strong>몸의 부활</td>
                     <td class="whitespace-normal break-words">죄를 사하여 주시는 것과 몸이 부활하는 것과 <strong>영생을</strong> 믿사옵니다</td>
                 </tr>
-                <tr><td colspan="3" class="italic whitespace-normal break-words">신자의 죄 사함과 궁극적인 목적지인 영생을 명확히 고백.</td></tr>
+                <tr><td colspan="3" class="italic whitespace-normal break-words">믿는자들에 대한 죄 사함과 궁극적인 목적지인 영생을 명확히 고백.(기복주의 X)</td></tr>
                 </tbody>
             </table>
     </section>
@@ -279,10 +279,9 @@
                     <p>나는 하나님 아버지를 믿습니다. 전능하신 하나님 아버지를 믿습니다.</p>
                     <p>Creatorem caeli et terrae.</p>
                     <p>천지의 창조자이신 하나님 아버지를 믿습니다.</p>
-
-                    <p>Credo는 "나는 믿는다"라는 뜻으로, 믿음은 나의 심장(cre)과 생명(do)을 드리는 고백이다.</p>
                     <br>
-                    <p>전능하신 창조주 하나님께서 나의 아버지이시기에 어떤 상황에도 휩쓸리지 않고 믿음으로 살아갈 수 있다.</p>
+                    <p>Credo는 "나는 믿는다"라는 뜻으로, 믿음은 나의 심장(cre)을 드리는(do) 고백이다. 즉 생명을 하나님께 맡겨야 하는 믿음을 나타낸다.</p>
+                    <p>전능하신 창조주 하나님께서 나의 아버지이시기에, 하나님의 인도하심에 따라 어떤 상황속에서도 휩쓸리지 않고 믿음으로 살아갈 수 있다.</p>
                 </div>
                 <div class="my-4">
                     <h4 class="text-sm sm:text-base md:text-lg lg:text-xl font-bold">성자</h4>
@@ -305,7 +304,9 @@
                     <p>inde venturus est iudicare vivos et mortuos.</p>
                     <p>거기로부터 살아 있는 자와 죽은 자를 심판하러 오시리이다.</p>
                     <br>
-                    <p>이 고백은 예수님을 나의 주로 고백하는 믿음이며, 믿음으로 바른 삶을 추구하고 하나님의 심판 앞에 서야 함을 상기시킨다.</p>
+                    <p>참된 그리스도인으로 살아가기 위해서는 어디에서나 하나님께서 계심을 믿어야 한다. </p>
+                    <p>정의와 공평의 하나님은 상도 주시며, 심판도 내리시는 분이다.</p>
+                    <p>하나님을 바라 보며 바른 삶을 추구하고, 하나님을 믿는 믿음으로 영적으로 나태한 우리를 성경적인 윤리 위에 서서 살아가도록 해야 한다.</p>
                 </div>
                 <div class="my-4">
                     <h4 class="text-sm sm:text-base md:text-lg lg:text-xl font-bold">성령</h4>
@@ -320,14 +321,18 @@
                     <p>carnis resurrectionem et vitam aeternam. </p>
                     <p>몸의 부활(원 상태로의 회복)과 영원히 사는 것을 믿나이다. </p>
                     <br>
-                    <p>이 고백은 눈에 보이는 기적이 아닌, 보이지 않는 본질과 말씀을 믿는 신앙을 의미한다. 하나님께 내 심장과 생명을 드리는 참된 믿음의 고백이다.</p>
+                    <p>우리가 이 세상을 떠나 하나님 앞에 섰을 때 하나님께 보여드릴 수 있는 것은 우리가 이 세상에서 모은 것들이 아니다.</p>
+                    <p>우리가 하나님께 보여드릴 수 있는 것은 하나님을 위해 포기한 것들뿐으로, 이 땅에서 포기한 만큼 천국에서 되돌려 받는다.</p>
+                    <p>영원이라는 안경을 써야지만 미련 없이 포기 할 것들을 포기 할 수 있다.</p>
+                    <p>우리는 사도신경의 고백을 통해 성령님의 빛 속에서 영원, 영생의 안경을 쓰고 이 세상을 넉넉히 이기며 살겠다고 다짐하는 것이다.</p>
                 </div>
             </div>
             <div class="my-4">
                 <h3 class="text-sm sm:text-base md:text-lg lg:text-xl font-bold">결어</h3>
                 <p>Amen.</p>
                 <br>
-                <p>진실입니다, 믿습니다, 이루어질 것을 바랍니다, 동의합니다 라는 의미를 담은 고백이다. 사도신경은 진실한 믿음으로 끝맺는다.</p>
+                <p>진실입니다, 믿습니다, 이루어질 것을 바랍니다, 동의합니다 라는 의미를 담은 고백이다.</p>
+                <p>사도신경은 하나님을 향한 인간의 고백으로, 앞선 고백이 모두 진심이며 믿으며 이루어질것을 바라며 동의한다는 진실한 고백으로 끝맺는다.</p>
             </div>
         </section>
     </div>
@@ -336,7 +341,7 @@
         <ul class="list-decimal list-inside space-y-2 text-xs sm:text-sm md:text-base lg:text-lg p-6">
             <li>사도신경의 고백은 반복될수록 의미가 깊어진다.</li>
             <li>눈에 보이는 기적이 아닌, 보이지 않는 말씀의 본질을 믿어야 한다.</li>
-            <li>하나님의 말씀에 당신의 심장(Credo)과 생명을 드려야 한다.</li>
+            <li>하나님의 말씀에 당신의 심장(Credo), 즉 생명을 드려야 한다.</li>
             <li>하나님의 말씀이 그대의 생명을 영원히 책임져 줄 것이다.</li>
         </ul>
     </section>
